[gd_scene load_steps=6 format=3 uid="uid://dsq1urcace0fi"]

[ext_resource type="Script" path="res://scenes/main/game_scene/game_scene.gd" id="1_7iugo"]
[ext_resource type="Theme" uid="uid://li0igb4tcl4r" path="res://resources/themes/theme-main_menu.tres" id="1_proc0"]
[ext_resource type="PackedScene" uid="uid://7vhvvro5wc3n" path="res://scenes/main/labyrinth/labyrinth.tscn" id="2_gryik"]
[ext_resource type="PackedScene" uid="uid://bi0x8gx5yrxtq" path="res://scenes/ui/message_log/message_log.tscn" id="3_fguye"]
[ext_resource type="PackedScene" uid="uid://b4fh2upqcbns8" path="res://scenes/ui/user_interface/user_interface.tscn" id="4_fu084"]

[node name="GameScene" type="PanelContainer" groups=["game_scene"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_proc0")
script = ExtResource("1_7iugo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Labyrinth" parent="HBoxContainer/CenterContainer/VBoxContainer" groups=["game_elements"] instance=ExtResource("2_gryik")]
z_index = 1
layout_mode = 2

[node name="MessageLog" parent="HBoxContainer/CenterContainer/VBoxContainer" groups=["game_elements"] instance=ExtResource("3_fguye")]
custom_minimum_size = Vector2(320, 300)
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="UserInterface" parent="HBoxContainer/MarginContainer" instance=ExtResource("4_fu084")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
